Fix rendering issue

--- a/Imdb Movie Sentiment Analysis.ipynb
+++ b/Imdb Movie Sentiment Analysis.ipynb
@@ -2079,9 +2079,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set accuracy: 0.629\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       0.64      0.59      0.61      7406\n",
+      "    positive       0.62      0.67      0.64      7469\n",
+      "\n",
+      "    accuracy                           0.63     14875\n",
+      "   macro avg       0.63      0.63      0.63     14875\n",
+      "weighted avg       0.63      0.63      0.63     14875\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the SVM classifier\n",
     "clf_svm = svm.SVC(kernel='linear')\n",
@@ -2109,9 +2126,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set accuracy: 0.887\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       0.89      0.88      0.89      7406\n",
+      "    positive       0.88      0.89      0.89      7469\n",
+      "\n",
+      "    accuracy                           0.89     14875\n",
+      "   macro avg       0.89      0.89      0.89     14875\n",
+      "weighted avg       0.89      0.89      0.89     14875\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model\n",
     "clf_lr = LogisticRegression(solver='liblinear')\n",
@@ -2135,9 +2169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set accuracy: 0.849\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       0.85      0.85      0.85      7406\n",
+      "    positive       0.85      0.85      0.85      7469\n",
+      "\n",
+      "    accuracy                           0.85     14875\n",
+      "   macro avg       0.85      0.85      0.85     14875\n",
+      "weighted avg       0.85      0.85      0.85     14875\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the Random Forest model\n",
     "clf_rfc = RandomForestClassifier()\n",
@@ -2167,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2183,9 +2234,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set accuracy: 0.863\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       0.85      0.88      0.87      7406\n",
+      "    positive       0.88      0.84      0.86      7469\n",
+      "\n",
+      "    accuracy                           0.86     14875\n",
+      "   macro avg       0.86      0.86      0.86     14875\n",
+      "weighted avg       0.86      0.86      0.86     14875\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the Naive Bayes Classifier\n",
     "clf_nb = MultinomialNB()\n",
